@@ -1,5 +1,10 @@
 2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/output-ps.scm (offset-add): Remove.
+
+	* scm/lily-library.scm (offset-flip-y): New function.
+	* scm/framework-gnome.scm (tweak): Use it.
+
 	* scm/output-gnome.scm (grob-cause): Add parameter.
 
 	* scm/lily.scm (ly:all-stencil-expressions): Add url-link.
